--- a/index.html
+++ b/index.html
@@ -181,6 +181,27 @@
   </div>
 </template>
 
+<script>
+  var fireballSize = 22;
+  var getFireballSpeed = function(left) {
+    return left ? 5 : 2;
+  }
+
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  var getWizardHeight = function (wizardWidth) {
+    return 1.337 * wizardWidth;
+  }
+
+  var getWizardX = function(width) {
+    return 0.5 * width - wizardWidth / 2;
+  }
+
+  var getWizardY = function(height) {
+    return 0.67 * height - getWizardHeight(wizardWidth) / 2;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
