--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     return 0.67 * height - getWizardHeight(wizardWidth) / 2;
   }
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
