--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 </script>
 <script src="js/constants.js"></script>
 <script src="js/util.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/random.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/validity.js"></script>
