--- a/index.html
+++ b/index.html
@@ -201,12 +201,11 @@
     return 0.67 * height - getWizardHeight(wizardWidth) / 2;
   }
 </script>
-<script src="js/constants.js"></script>
 <script src="js/util.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/random.js"></script>
-<script src="js/colorize.js"></script>
-<script src="js/validity.js"></script>
+<script src="js/wizards.js"></script>
+<script src="js/render.js"></script>
+<script src="js/form.js"></script>
 <script src="js/dnd.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
