--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 <script src="js/render.js"></script>
 <script src="js/form.js"></script>
 <script src="js/dnd.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
